# Lite

./: .gitignore  Cargo.toml  OVERVIEW..md  README.md  index.html  index.md  test.lt
crates/error/: Cargo.toml
crates/error/src/: lib.rs
crates/ice/: Cargo.toml
crates/lexer/: Cargo.toml
crates/lexer/src/: lib.rs  token.rs  tokens.rs
crates/litec/: Cargo.toml
crates/litec/src/: main.rs
crates/main/: Cargo.toml
crates/main/src/: main.rs
crates/nameresolution/: Cargo.toml
crates/nameresolution/src/: errors.rs  lib.rs  scope.rs
crates/parser/: Cargo.toml
crates/parser/src/: ast.rs  error.rs  errors.rs  expression.rs  lib.rs  precedence.rs  print_ast.rs  statement.rs
crates/parser/tests/: test_parser.rs
crates/parser/tests/snapshots/: test_parser__parse_array.snap  test_parser__parse_assignment.snap  test_parser__parse_binary.snap  test_parser__parse_block.snap  test_parser__parse_call.snap  test_parser__parse_for.snap  test_parser__parse_function.snap  test_parser__parse_idents.snap  test_parser__parse_if.snap  test_parser__parse_import.snap  test_parser__parse_let.snap  test_parser__parse_literals.snap  test_parser__parse_return.snap  test_parser__parse_tuple.snap  test_parser__parse_unary-2.snap  test_parser__parse_unary.snap  test_parser__parse_while.snap
crates/span/: Cargo.toml
crates/span/src/: lib.rs
tests/: test_lexer
tests/lexer/: errors.lite  invalid_char.lite  keywords.lite  literals.lite  operators.lite  punctuation.lite  unterminated_char.lite
tests/parser/: arrays.lite  block.lite  for.lite  identifiers.lite  if.lite  literals.lite  precedence.lite  tuples.lite  while.lite
utils/: .pdm.toml  pyproject.toml  tests.py
