[package]
name = "litec"
version = "0.1.0"
edition = "2021"
description = "The Lite compiler"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parser = { path = "../parser" }
lexer = { path = "../lexer" }
error = { path = "../error" }
clap = { version = "3.2.13", features = ["derive"] }
