[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexer = { path = "../lexer" }
error = { path = "../error" }
span = { path = "../span" }
ariadne = "0.1.5"
serde = { version = "1.0.144", features = ["derive"] }

[dev-dependencies]
insta = { version = "1.19.1", features = ["yaml"] }
